# arcagent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TERRY.md  config.yaml  docker-compose.yml  pyproject.toml
skills/example-summarizer/: SKILL.md
skills/example-web-search/: SKILL.md
skills/file-manager/: SKILL.md
skills/process-manager/: SKILL.md
skills/screenshot/: SKILL.md
skills/script-runner/: SKILL.md
skills/self-improve/: SKILL.md
skills/server-status/: SKILL.md
skills/tweet-reader/: SKILL.md
skills/web-research/: SKILL.md
src/arcagent/: __init__.py  config.py  main.py
src/arcagent/core/: conversation.py  engine.py  memory.py  message_types.py
src/arcagent/dashboard/: app.py  routes.py
src/arcagent/dashboard/static/: app.js  index.html  style.css
src/arcagent/discord_bot/: bot.py  commands.py  formatters.py  handlers.py
src/arcagent/security/: credentials.py  network.py  validation.py
src/arcagent/skills/: compiler.py  loader.py  registry.py  types.py
src/arcagent/tools/: builtin.py  registry.py
